--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -22,10 +22,7 @@
 }
 
   .input{
-    @apply w-full border-2 border-accentone/30 rounded-xl px-5 py-2
-    focus:outline-none focus:ring-2 focus:ring-accentone/70
-    font-secondary text-base font-semibold
-    placeholder:text-primarytext text-primarytext/80
+    @apply text-lg w-full rounded-3xl shadow px-6 py-2 focus:outline-primarytext focus:outline-[0.8px] caret-primarytext dark:ring text-secondarytext
     invalid:border-accentone invalid:placeholder:text-accentone invalid:text-accentone
     min-w-0 max-w-full
     transition-all duration-300 ease-in-out
