--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -9,6 +9,9 @@
   --color-accentone: #C9A227;
   --color-accenttwo: #6C4A73;
   --color-cardbg: #FFFFFF;
+  --color-success: #16A34A;
+  --color-danger: #DC2626;
+  --color-alert: #D97706;
   --font-primary: 'Urbanist', sans-serif;
   --font-secondary: 'Playfair Display', serif;
 }
@@ -19,10 +22,19 @@
   --color-accentone: #FFD700;
   --color-accenttwo: #6C4A73;
   --color-cardbg: #1B263B;
+  --color-success: #064E3B;
+  --color-danger: #F87171;
+  --color-alert: #FBBF24;
 }
 
   .input{
     @apply text-lg w-full rounded-3xl shadow px-6 py-2 focus:outline-primarytext focus:outline-[0.8px] caret-primarytext dark:ring text-secondarytext
+    invalid:border-accentone invalid:placeholder:text-accentone invalid:text-accentone
+    min-w-0 max-w-full
+    transition-all duration-300 ease-in-out
+  }
+    .admin-input{
+    @apply text-lg w-full rounded-lg shadow px-6 py-2 focus:outline-primarytext focus:outline-[0.8px] caret-primarytext dark:ring text-secondarytext
     invalid:border-accentone invalid:placeholder:text-accentone invalid:text-accentone
     min-w-0 max-w-full
     transition-all duration-300 ease-in-out
