--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -14,6 +14,7 @@
   --color-alert: #D97706;
   --font-primary: 'Urbanist', sans-serif;
   --font-secondary: 'Playfair Display', serif;
+  --breakpoint-xs: 30rem;
 }
 .dark {
   --color-primarybg: #121212;
@@ -39,3 +40,43 @@
     min-w-0 max-w-full
     transition-all duration-300 ease-in-out
   }
+@keyframes spin-forward {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(90deg);
+  }
+}
+
+@keyframes spin-backward {
+  from {
+    transform: rotate(90deg);
+  }
+  to {
+    transform: rotate(0deg);
+  }
+}
+
+@theme {
+  --animate-spin-forward: spin-forward 0.4s linear 1;
+  --animate-spin-backward: spin-backward 0.4s linear 1;
+}
+
+.custom-scrollbar::-webkit-scrollbar {
+  width: 6px;              /* Thin scrollbar */
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+  background: transparent;  /* Invisible track */
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background: rgba(0,0,0,0.2); /* Semi-transparent thumb */
+  border-radius: 9999px;    /* Rounded ends */
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb:hover {
+  background: rgba(0,0,0,0.4); /* Slightly darker on hover */
+}
+
